Fixing z-index for responsive preview

--- a/src/sass/block/_block.scss
+++ b/src/sass/block/_block.scss
@@ -44,3 +44,9 @@
 .joyride-tip-guide h2 {
   font-size: 1.75rem;
 }
+
+/** Responsive Preview **/
+
+.responsive-preview {
+  z-index: 1020;
+}
